Add list of made modifications to README
[skip ci]

--- a/README.adoc
+++ b/README.adoc
@@ -7,3 +7,32 @@ Prebuilt images for your Raspberry Pi are available in https://github.com/{gh-na
 Installation procedure is the same as for original Raspbian image which is described https://www.raspberrypi.org/documentation/installation/installing-images/[here].
 
 Images are automatically built on https://travis-ci.org/{gh-name}[Travis CI].
+
+
+== Modifications in this image
+
+Our image is built with the same scripts as the “official” one, with the following modifications:
+
+* Default name servers changed to: 8.8.8.8, 217.31.204.130, 2001:4860:4860::8888, 2001:1488:800:400::130.
+* Hostname changed from `raspberrypi` to `hub`.
+* Locale changed from `en_GB.UTF-8` to `en_US.UTF-8`.
+* Keymap changed from `English (UK)` to `English (US) - English (US, international with dead keys)`.
+* Timezone changed from `Etc/UTC` to `Europe/Prague`.
+* Country in `wpa_supplicant.conf` changed from `GB` to `CZ`.
+* OpenSSH daemon enabled by default and removed `AcceptEnv LANG LC_*`.
+* Added third-party repositories:
+  ** https://deb.nodesource.com/node_6.x
+  ** https://apt.dockerproject.org/repo
+  ** https://repo.bigclown.com/debian
+* Installed additional packages:
+  ** bc-workroom-blynk
+  ** bc-workroom-common
+  ** bc-workroom-gateway
+  ** bc-workroom-led-strip
+  ** git
+  ** htop
+  ** mosquitto
+  ** mosquitto-clients
+  ** nodejs
+  ** python3-pip
+  ** python3-venv
