Change default systemd target from graphical to multi-user
This system does not contain GUI, so it doesn't make sense to start into
graphical mode.

This also "solves" failing noobs service that should not be started:

    apply_noobs_os_config.service start operation timed out. Terminating.
    failed to start apply_noobs_os_config.service.

--- a/CHANGELOG.adoc
+++ b/CHANGELOG.adoc
@@ -9,6 +9,7 @@ Changed::
 * Disable `AcceptEnv LANG LC_*` in `sshd_config`.
 * Change timezone from `Etc/UTC` to `Europe/Prague`.
 * Enable SSH daemon by creating empty file `/boot/ssh` instead of running `systemctl enable ssh` during build as before.
+* Change default systemd target from graphical to multi-user.
 
 Fixed::
 * Fix name of the bc-workroom-led-strip package (it has been renamed from “bc-workroom-ledstrip” to “bc-workroom-led-strip”).
