--- a/CHANGELOG.adoc
+++ b/CHANGELOG.adoc
@@ -1,6 +1,10 @@
 = Change Log
 :gh-url: https://github.com/bigclownlabs/bc-raspbian
 
+== link:{gh-url}/tree/v1.3.0[1.3.0] (2017-07-25)
+Changed::
+* Add Node-RED
+
 == link:{gh-url}/tree/v1.2.0[1.2.0] (2017-07-12)
 Changed::
 * Add package bc-gateway
