--- a/CHANGELOG.adoc
+++ b/CHANGELOG.adoc
@@ -6,6 +6,7 @@ Changed::
 * Add PM2 process manager
 * Add bcg
 * Add bcf
+* Add dfu-util
 * Add tmux
 * Change mosquitto repository from jessie to stretch
 * Remove plugins from Node-RED
