--- a/CHANGELOG.adoc
+++ b/CHANGELOG.adoc
@@ -12,6 +12,7 @@ Changed::
 * Remove plugins from Node-RED
 * Remove Bigclown repository
 * Fix mosquitto install. We will remove this fix in the future.
+* Fix xxd on travis, xxd unknown option -e
 
 == link:{gh-url}/tree/v1.4.0[1.4.0] (2017-08-10)
 Changed::
